--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ button:hover {
 
 .row-1-header {
   display: flex;
+  margin-bottom: 20px;
 }
 
 .row-1-body {
   width: 66%;
-  margin-bottom: 50px;
 }
 
 .why-vivasoft {
@@ -62,13 +62,8 @@ button:hover {
   padding-bottom: 70px;
 }
 
+.why-vivasoft-heading-2,
 .why-vivasoft-heading {
-  font-size: 42px;
-  line-height: 60px;
-}
-
-.why-vivasoft-heading-2 {
-  width: 50%;
   font-size: 42px;
   line-height: 60px;
 }
@@ -80,7 +75,7 @@ button:hover {
   font-size: 20px;
 }
 
-.why-vivasoft-row-1 {
+.row-1 {
   width: 80%;
   margin: auto;
   padding-bottom: 40px;
@@ -91,7 +86,10 @@ button:hover {
   font-size: 18px;
 }
 
-.box-1 {
+.box-1,
+.box-2,
+.box-4,
+.box-5 {
   text-align: center;
   background-color: white;
   width: 31.333%;
@@ -100,11 +98,30 @@ button:hover {
   transition: 0.5s;
 }
 
-.box-1-img {
+.box-3,
+.box-6 {
+  text-align: center;
+  background-color: white;
+  width: 31.333%;
+  border-radius: 5px 5px 5px 5px;
+  transition: 0.5s;
+}
+
+.box-1-img,
+.box-2-img,
+.box-3-img,
+.box-4-img,
+.box-5-img,
+.box-6-img {
   padding-top: 44px;
 }
 
-.box-1-content {
+.box-1-content,
+.box-2-content,
+.box-3-content,
+.box-4-content,
+.box-5-content,
+.box-6-content {
   padding-left: 48px;
   padding-right: 48px;
   padding-bottom: 48px;
@@ -119,93 +136,12 @@ button:hover {
   box-shadow: 0px 12px 36px 0px rgba(0, 0, 0, 0.06);
 }
 
-.box-2 {
-  text-align: center;
-  background-color: white;
-  width: 31.333%;
-  margin-right: 3%;
-  border-radius: 5px 5px 5px 5px;
-  transition: 0.5s;
-}
-
-.box-2-content {
-  padding-left: 48px;
-  padding-right: 48px;
-  padding-bottom: 48px;
-}
-
-.box-2-img {
-  padding-top: 44px;
-}
-
-.box-3 {
-  text-align: center;
-  background-color: white;
-  width: 31.333%;
-  border-radius: 5px 5px 5px 5px;
-  transition: 0.5s;
-}
-
-.box-3-content {
-  padding-left: 48px;
-  padding-right: 48px;
-  padding-bottom: 48px;
-}
-
-.box-3-img {
-  padding-top: 44px;
-}
-
-.box-4 {
-  text-align: center;
-  background-color: white;
-  width: 31.333%;
-  margin-right: 3%;
-  border-radius: 5px 5px 5px 5px;
-  transition: 0.5s;
-}
-
-.box-4-content {
-  padding-left: 48px;
-  padding-right: 48px;
-  padding-bottom: 48px;
-}
-
-.box-4-img {
-  padding-top: 44px;
-}
-
-.box-5 {
-  text-align: center;
-  background-color: white;
-  width: 31.333%;
-  margin-right: 3%;
-  border-radius: 5px 5px 5px 5px;
-  transition: 0.5s;
-}
-
-.box-5-img {
-  padding-top: 44px;
-}
-
-.box-6 {
-  text-align: center;
-  background-color: white;
-  width: 31.333%;
-  border-radius: 5px 5px 5px 5px;
-  transition: 0.5s;
-}
-
-.box-6-img {
-  padding-top: 44px;
-}
-
 .works {
   width: 80%;
   margin: auto;
   padding-bottom: 50px;
 }
-.why-vivasoft-row-2 {
+.row-2 {
   display: block;
   width: 80%;
   margin: auto;
@@ -217,33 +153,36 @@ button:hover {
   margin-top: 40px;
 }
 
-.works-top-left,
 .top-boxes {
+  display: flex;
+}
+
+.work-body {
+  width: 100%;
+  padding-bottom: 40px;
+}
+
+.works-top-left {
   display: flex;
 }
 
 .works-top-right {
   float: right;
-}
-
-.work-body {
-  padding-bottom: 40px;
+  position: relative;
+  top: -110px;
 }
 
 .work-portfolio {
   margin-top: 40px;
 }
 
-.work-portfolio-top {
-  display: flex;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-}
-
+.work-portfolio-top,
 .work-portfolio-bottom {
   display: flex;
   margin-top: 10px;
   padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .box-content-text {
@@ -252,6 +191,14 @@ button:hover {
   margin: 0px;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.porfolio-box-1:hover,
+.porfolio-box-2:hover,
+.porfolio-box-3:hover,
+.porfolio-box-4:hover {
+  background-size: 60%;
+  transition: 0.5s;
 }
 
 .porfolio-box-1 {
@@ -265,14 +212,6 @@ button:hover {
   padding-top: 42px;
   padding-bottom: 42px;
   margin-right: 3%;
-}
-
-.porfolio-box-1:hover,
-.porfolio-box-2:hover,
-.porfolio-box-3:hover,
-.porfolio-box-4:hover {
-  background-size: 55%;
-  transition: 0.5s;
 }
 
 .porfolio-box-2 {
@@ -328,4 +267,96 @@ button:hover {
   float: right;
   width: 60%;
   padding: 52px 0px 52px 44px;
+}
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 32px !important;
+    line-height: 40px !important;
+  }
+
+  .row-1-body {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .top-boxes,
+  .bottom-boxes {
+    display: block;
+    margin: none;
+    padding: none;
+  }
+
+  .box-1,
+  .box-2,
+  .box-3,
+  .box-4,
+  .box-5,
+  .box-6 {
+    text-align: center;
+    background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    border-radius: 5px 5px 5px 5px;
+    transition: 0.5s;
+    width: 100%;
+  }
+
+  .work-portfolio-top,
+  .work-portfolio-bottom {
+    display: block;
+    position: relative;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+  }
+
+  .porfolio-box-1,
+  .porfolio-box-2,
+  .porfolio-box-3,
+  .porfolio-box-4 {
+    margin: 0px 0px 30px 0px;
+    padding: 0px 0px 10px 0px;
+    width: 100%;
+  }
+
+  .porfolio-box-3 {
+    float: none;
+  }
+
+  .portfolio-box-content-3 {
+    float: none;
+    margin-left: 35%;
+  }
+
+  .works-top-right {
+    top: 0px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .row-1-body {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .porfolio-box-1,
+  .porfolio-box-2,
+  .porfolio-box-3,
+  .porfolio-box-4 {
+    background-size: 60%;
+  }
+
+  .porfolio-box-3 {
+    background-position-x: 17px;
+  }
+
+  .porfolio-box-1:hover,
+  .porfolio-box-2:hover,
+  .porfolio-box-3:hover,
+  .porfolio-box-4:hover {
+    background-size: 65%;
+    transition: 0.5s;
+  }
 }
